# babymode

./: Cargo.toml  ENHANCEMENTS.md  LICENSE  README.md  REFACTORING_SUMMARY.md
src/: audio.rs  censoring.rs  config.rs  config_file.rs  dependencies.rs  error.rs  lib.rs  main.rs  plugins.rs  progress.rs  resources.rs  video.rs  whisper.rs
