[package]
name = "babymode"
version = "0.1.0"
edition = "2021"
authors = ["adminx"]
description = "A multimedia application that automatically censors swearing in video files using faster-whisper"
readme = "README.md"
license = "MIT"
keywords = ["video", "audio", "censorship", "multimedia", "whisper"]
categories = ["multimedia::video", "multimedia::audio"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tempfile = "3.0"
indicatif = "0.17"
serde_yaml = "0.9"
dirs = "5.0"
async-trait = "0.1"
